--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,12 @@
   animation: mulShdSpin 1.1s infinite ease;
   transform: translateZ(0);
 }
+.btn-animation {
+  transition: 0.7s ease-in-out;
+}
+.btn-animation:hover {
+  transform: translateX(20px);
+}
 
 @keyframes mulShdSpin {
   0%,
