--- a/src/index.css
+++ b/src/index.css
@@ -125,11 +125,14 @@
   animation: mulShdSpin 1.1s infinite ease;
   transform: translateZ(0);
 }
-.btn-animation {
+.projectBtn-animation {
   transition: 0.7s ease-in-out;
 }
-.btn-animation:hover {
-  transform: translateX(20px);
+.projectBtn-animation:hover {
+  /* transform: scaleY(1.1);
+  transform: scaleX(1.1); */
+  transform: scale(1.06);
+  box-shadow: 0px 0px 10px 6px rgba(236, 0, 140, 0.4);
 }
 
 @keyframes mulShdSpin {
